# computer-vision

./: .gitignore  CMakeLists.txt
examples/course/example1/: toys_t.yml  toys_t1.yml  toys_t2.yml
examples/course/example2/: box1.yml  boxes.yml
examples/course/example3/: book_background.yml
lib/: CMakeLists.txt
lib/inc/: borders.h  descriptors.h  descriptors.hpp  descriptors.tpp  detectors.h  filters.h  homography.h  hough.h  image.h  imageprocessing.h  img.h  kernels.h  octave.cpp  octave.h  operations.h  pyramid.h  transforms.h  transforms.hpp  transforms.tpp  utils.h
lib/src/: borders.cpp  descriptors.cpp  detectors.cpp  filters.cpp  homography.cpp  hough.cpp  image.cpp  imageprocessing.cpp  img.cpp  kernels.cpp  octave.cpp  operations.cpp  pyramid.cpp  transforms.cpp  utils.cpp
main/: CMakeLists.txt
main/inc/: utils.h  utils.hpp
main/src/: detectors.cpp  detectors.h  main.cpp  utils.cpp
